# ER-Save-Editor-1.16

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/api/: github.rs
src/api/models/: releases.rs
src/db/: bosses.rs  classes.rs  colosseums.rs  cookbooks.rs  graces.rs  item_name.rs  map_name.rs  maps.rs  mod.rs  regions.rs  stats.rs  summoning_pools.rs  whetblades.rs
src/ui/: character_list.rs  events.rs  file_drop.rs  general.rs  importer.rs  information.rs  menu.rs  mod.rs  none.rs  notifications.rs  regions.rs  settings.rs  stats.rs  toolbar.rs
src/ui/custom/: checkbox.rs  mod.rs  selectable.rs
src/ui/inventory/: browse.rs  inventory.rs  mod.rs
src/ui/inventory.old/: mod.rs
src/ui/inventory/add/: add.rs  mod.rs  single.rs
src/updater/: updater.rs
src/vm/: character.rs  events.rs  general.rs  importer.rs  mod.rs  notifications.rs  profile_summary.rs  regions.rs  regulation.rs  stats.rs  vm.rs
src/vm/inventory/: browse.rs  inventory.rs
src/vm/inventory/add/: add.rs  affinity.rs  filter.rs  item_param.rs  mod.rs  weapon_type.rs
src/vm/inventory_old/: mod.rs
