[package]
name = "er-save-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui-phosphor = { version = "0.4.0", features = ["regular", "fill"] }
egui_extras = "0.26.2"
env_logger = "0.11.2"
image = "0.25.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
rfd = "0.13.0"
rust-embed = "8.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
strsim = "0.11.0"
er-save-lib = {git = "https://github.com/ClayAmore/ER-Save-Lib.git"}
chrono = "0.4.38"

[build-dependencies]
winres = "0.1.12"
